--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -10,8 +10,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2
-      - name: Install Deps
-        uses: onichandame/node-test-action@0.0.0
+      - name: Test
+        uses: onichandame/node-test-action@0.0.1
   release:
     runs-on: ubuntu-latest
     needs:
