--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,6 +12,8 @@ jobs:
         uses: actions/checkout@v2
       - name: Test
         uses: onichandame/node-test-action@0.0.1
+        env:
+          YARN_ENABLE_IMMUTABLE_INSTALLS: false
   release:
     runs-on: ubuntu-latest
     needs:
