--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "test": "NODE_ENV=test ts-mocha src/**/*.test.ts",
     "build": "tsc -p ./tsconfig.build.json"
   },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  },
   "files": [
     "dist"
   ],
