--- a/package.json
+++ b/package.json
@@ -1,11 +1,20 @@
 {
   "name": "@onichandame/retry",
+  "type": "module",
   "version": "0.0.0",
   "description": "modern retry with simplicity",
   "main": "dist/index",
   "scripts": {
-    "test": "NODE_ENV=test ts-mocha src/**/*.test.ts",
+    "test": "jest",
     "build": "tsc -p ./tsconfig.build.json"
+  },
+  "jest": {
+    "preset": "ts-jest/presets/default-esm",
+    "globals": {
+      "ts-jest": {
+        "useESM": true
+      }
+    }
   },
   "publishConfig": {
     "registry": "https://registry.npmjs.org"
@@ -24,10 +33,10 @@
   },
   "homepage": "https://github.com/onichandame/node-retry#readme",
   "devDependencies": {
-    "@types/mocha": "^9.0.0",
+    "@types/jest": "^27.0.1",
     "@types/node": "^16.6.1",
-    "mocha": "^9.0.3",
-    "ts-mocha": "^8.0.0",
+    "jest": "^27.0.6",
+    "ts-jest": "^27.0.5",
     "typescript": "^4.3.5"
   }
 }
