--- a/package.json
+++ b/package.json
@@ -1,12 +1,15 @@
 {
   "name": "@onichandame/retry",
   "type": "module",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "modern retry with simplicity",
-  "main": "dist/index",
+  "main": "dist/cjs/index",
+  "module": "dist/esm/index.js",
   "scripts": {
     "test": "jest",
-    "build": "tsc -p ./tsconfig.build.json"
+    "build:cjs": "tsc -p ./tsconfig.build-cjs.json",
+    "build:esm": "tsc -p ./tsconfig.build-esm.json",
+    "build": "concurrently 'yarn build:cjs' 'yarn build:esm'"
   },
   "jest": {
     "preset": "ts-jest/presets/default-esm",
@@ -35,6 +38,7 @@
   "devDependencies": {
     "@types/jest": "^27.0.1",
     "@types/node": "^16.6.1",
+    "concurrently": "^6.2.1",
     "jest": "^27.0.6",
     "ts-jest": "^27.0.5",
     "typescript": "^4.3.5"
