--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,12 +1,1 @@
-npmAuthToken: "${NPM_AUTH_TOKEN:-fallback}"
-
-plugins:
-  - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
-    spec: "@yarnpkg/plugin-version"
-
-yarnPath: .yarn/releases/yarn-berry.cjs
-
-changesetBaseRefs:
-  - "main"
-  - "origin/main"
-  - "upstream/main"
+yarnPath: ".yarn/releases/yarn-berry.cjs"
