--- a/package.json
+++ b/package.json
@@ -1,30 +1,15 @@
 {
   "name": "@onichandame/retry",
-  "version": "1.0.2",
-  "description": "modern retry with simplicity",
-  "main": "dist/cjs/index",
+  "version": "1.0.3",
+  "description": "",
+  "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "scripts": {
     "test": "jest",
     "build:cjs": "tsc -p ./tsconfig.build-cjs.json",
     "build:esm": "tsc -p ./tsconfig.build-esm.json",
-    "build": "concurrently 'yarn build:cjs' 'yarn build:esm'",
-    "postinstall": "npm run build"
+    "build": "concurrently --kill-others-on-fail 'yarn build:cjs' 'yarn build:esm'"
   },
-  "jest": {
-    "preset": "ts-jest/presets/default-esm",
-    "globals": {
-      "ts-jest": {
-        "useESM": true
-      }
-    }
-  },
-  "publishConfig": {
-    "registry": "https://registry.npmjs.org"
-  },
-  "files": [
-    "dist"
-  ],
   "repository": {
     "type": "git",
     "url": "git+https://github.com/onichandame/node-retry.git"
@@ -37,10 +22,10 @@
   "homepage": "https://github.com/onichandame/node-retry#readme",
   "devDependencies": {
     "@types/jest": "^27.0.1",
-    "@types/node": "^16.6.1",
+    "@types/node": "^16.7.10",
     "concurrently": "^6.2.1",
-    "jest": "^27.0.6",
+    "jest": "^27.1.0",
     "ts-jest": "^27.0.5",
-    "typescript": "^4.3.5"
+    "typescript": "^4.4.2"
   }
 }
