--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "build:esm": "tsc -p ./tsconfig.build-esm.json",
     "build": "concurrently --kill-others-on-fail 'yarn build:cjs' 'yarn build:esm'"
   },
+  "publishConfig": {
+    "registry": "https://registry.npmjs.org"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/onichandame/node-retry.git"
