chore: fix build

--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
   "name": "@onichandame/retry",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "test": "jest",
     "build:cjs": "tsc -p ./tsconfig.build-cjs.json",
