--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,11 @@
-yarnPath: ".yarn/releases/yarn-berry.cjs"
-
 npmAuthToken: "${NPM_AUTH_TOKEN:-fallback}"
+
+plugins:
+  - path: .yarn/plugins/@yarnpkg/plugin-version.cjs
+    spec: "@yarnpkg/plugin-version"
+
+yarnPath: .yarn/releases/yarn-berry.cjs
+
+changesetBaseRefs:
+  - main
+  - origin/main
